--- a/clicky-game/src/components/Wrapper/Wrapper.css
+++ b/clicky-game/src/components/Wrapper/Wrapper.css
@@ -1,6 +1,6 @@
 .wrapper {
   padding-top: 50px;
-  background: #8EA8C3;
+  background: rgb(221, 15, 15);
   height: 100%;
   width: 60%;
   display: flex;
@@ -11,5 +11,5 @@
   overflow: auto;
   margin: 0 auto;
   margin-top: 30px;
-  border-radius: 12px;
+  border-radius: 3px;
 }
