--- a/clicky-game/src/components/CardImage/CardImage.css
+++ b/clicky-game/src/components/CardImage/CardImage.css
@@ -1,15 +1,15 @@
 .images{
     border-width: 5px;
-    border-color: rgb(245, 245, 245);
-    border-style: solid;
+    border-color: rgb(192, 180, 16);
+    border-style: dashed;
     border-radius: 12px;
     height: 200px;
     width: 200px;
     /* padding: 10px; */
     margin: 20px;
-    -webkit-transition: box-shadow .2s;
+    -webkit-transition: box-shadow .5s;
     -webkit-transition-delay: .1s;
-    transition: box-shadow .2s;
+    transition: box-shadow .4s;
     transition-delay: .1s;
     box-shadow: 0 3px 10px 0 rgba(0, 0, 0, 0.2);
 }
